fixes for homepage on mobile

--- a/src/styles/desktop.scss
+++ b/src/styles/desktop.scss
@@ -122,7 +122,7 @@
   }  
 
   .home__splash {
-    height: 88.7vh;
+    height: 88.6vh;
   }
 
   .home__splash__text {
@@ -139,4 +139,20 @@
     margin: 0;
     padding: 0; 
     width: 125px;
+  }
+
+  .home__splash__text__intro {
+    padding: 0 0 0 5px;
+  }
+
+  .home__splash__menu__item {
+    padding: 0 10px;
+  }
+
+  .home__splash__menu li:first-of-type {
+    padding: 0 10px 0 0;
+  }
+
+  .home__splash__menu li:last-of-type {
+    padding: 0 0 0 10px;
   }
